byrjad a haskell implementation-i

--- a/hbv5.html
+++ b/hbv5.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=10" charset="utf-8">
 <head>
-<title>Stundatafla Töl & Stæ</title>
+<title>Stundatafla MPG Haust 2013</title>
 </head>
  <body>
 <h3 align="center">Matthías Páll Gissurarson, Tölvunarfræði og Stærðfræði, 5. misseri</h3>
@@ -11,40 +11,40 @@
 <tr>
 <td><small>08:20-09:00</small></td>
 <td bgcolor=Grey><small>TÖL304G d4 Forrmál NN V-258</small></td>
-<td bgcolor=Grey><small>TÖL304G d2 Forrmál NN V-261</small></td>
 <td><small></small></td>
 <td><small></small></td>
-<td bgcolor=DodgerBlue><small>TÖL301G d3 Forml. mál HTH A-207</small></td>
+<td><small></small></td>
+<td><small></small></td>
 </tr>
 <tr>
 <td><small>09:10-09:50</small></td>
 <td bgcolor=Grey><small>TÖL304G d4 Forrmál NN V-258</small></td>
-<td bgcolor=Grey><small>TÖL304G d2 Forrmál NN V-261</small></td>
 <td><small></small></td>
 <td><small></small></td>
-<td bgcolor=DodgerBlue><small>TÖL301G d3 Forml. mál HTH A-207</small></td>
+<td><small></small></td>
+<td><small></small></td>
 </tr>
 <tr>
 <td><small>10:00-10:40</small></td>
 <td><small></small></td>
 <td bgcolor=DodgerBlue><small>TÖL301G f Forml. mál KJ V-261</small></td>
-<td bgcolor=Purple><small>STÆ301G f Tvinnf. I RA V-138</small></td>
-<td bgcolor=Lime><small>HBV501G d1 Hugbv. 1 EÞH V-152</small></td>
+<td><small></small></td>
+<td><small></small></td>
 <td><small></small></td>
 </tr>
 <tr>
 <td><small>10:50-11:30</small></td>
 <td><small></small></td>
 <td bgcolor=DodgerBlue><small>TÖL301G f Forml. mál KJ V-261</small></td>
-<td bgcolor=Purple><small>STÆ301G f Tvinnf. I RA V-138</small></td>
-<td bgcolor=Lime><small>HBV501G d1 Hugbv. 1 EÞH V-152</small></td>
+<td><small></small></td>
+<td><small></small></td>
 <td><small></small></td>
 </tr>
 <tr bgcolor="#FFFFCC">
 <td><small>11:40-12:20</small></td>
 <td bgcolor=Orange><small>STÆ520M  Netafræði RA V-258</small></td>
 <td bgcolor=DodgerBlue><small>TÖL301G f Forml. mál KJ V-261</small></td>
-<td bgcolor=Orange><small>STÆ520M  Netafræði RA V-138</small></td>
+<td bgcolor=Orange><small>TÖL301G  Forml. mál KJ HT-103<br />STÆ520M  Netafræði RA V-138</small></td>
 <td bgcolor=Lime><small>HBV501G d2 Hugbv. 1 EÞH V-152</small></td>
 <td><small></small></td>
 </tr>
@@ -52,7 +52,7 @@
 <td><small>12:30-13:10</small></td>
 <td bgcolor=Orange><small>STÆ520M  Netafræði RA V-258</small></td>
 <td><small></small></td>
-<td bgcolor=Orange><small>STÆ520M  Netafræði RA V-138</small></td>
+<td bgcolor=Orange><small>TÖL301G  Forml. mál KJ HT-103<br />STÆ520M  Netafræði RA V-138</small></td>
 <td bgcolor=Lime><small>HBV501G d2 Hugbv. 1 EÞH V-152</small></td>
 <td bgcolor=Lime><small>HBV501G f Hugbv. 1 EÞH V-152</small></td>
 </tr>
@@ -61,21 +61,21 @@
 <td bgcolor=Yellow><small>TÖL308G f Tölvul.forr PK V-158</small></td>
 <td><small></small></td>
 <td bgcolor=Yellow><small>TÖL308G f Tölvul.forr PK V-157</small></td>
-<td bgcolor=Orange><small>STÆ520M  Netafræði RA V-151</small></td>
-<td bgcolor=Purple><small>TÖL306G d4 Vefforr. ÓSK V-261<br />HBV501G f Hugbv. 1 EÞH V-152<br />STÆ301G f Tvinnf. I RA V-156</small></td>
+<td bgcolor=Orange><small>STÆ520M  Netafræði RA N-128</small></td>
+<td bgcolor=Red><small>HBV501G f Hugbv. 1 EÞH V-152<br />TÖL306G d4 Vefforr. ÓSK V-261</small></td>
 </tr>
 <tr>
 <td><small>14:10-14:50</small></td>
 <td bgcolor=Yellow><small>TÖL308G f Tölvul.forr PK V-158</small></td>
 <td><small></small></td>
 <td bgcolor=Yellow><small>TÖL308G d1 Tölvul.forr NN V-157</small></td>
-<td bgcolor=Orange><small>STÆ520M  Netafræði RA V-151</small></td>
-<td bgcolor=Purple><small>TÖL306G d4 Vefforr. ÓSK V-261<br />HBV501G f Hugbv. 1 EÞH V-152<br />STÆ301G f Tvinnf. I RA V-156</small></td>
+<td bgcolor=Orange><small>STÆ520M  Netafræði RA N-128</small></td>
+<td bgcolor=Red><small>HBV501G f Hugbv. 1 EÞH V-152<br />TÖL306G d4 Vefforr. ÓSK V-261</small></td>
 </tr>
 <tr>
 <td><small>15:00-15:40</small></td>
 <td bgcolor=Red><small>TÖL306G f Vefforr. ÓSK HT-105</small></td>
-<td bgcolor=Purple><small>TÖL301G d1 Forml. mál NN V-258<br />STÆ301G d Tvinnf. I RA V-138</small></td>
+<td bgcolor=DodgerBlue><small>TÖL301G d1 Forml. mál NN V-258</small></td>
 <td bgcolor=Yellow><small>TÖL308G d1 Tölvul.forr NN V-157</small></td>
 <td><small></small></td>
 <td bgcolor=Red><small>TÖL306G f Vefforr. ÓSK HT-102</small></td>
@@ -83,22 +83,22 @@
 <tr>
 <td><small>15:50-16:30</small></td>
 <td bgcolor=Red><small>TÖL306G f Vefforr. ÓSK HT-105</small></td>
-<td bgcolor=Purple><small>TÖL301G d1 Forml. mál NN V-258<br />STÆ301G d Tvinnf. I RA V-138</small></td>
+<td bgcolor=DodgerBlue><small>TÖL301G d1 Forml. mál NN V-258</small></td>
 <td><small></small></td>
 <td><small></small></td>
 <td bgcolor=Red><small>TÖL306G d3 Vefforr. ÓSK HT-103</small></td>
 </tr>
 <tr>
 <td><small>16:40-17:20</small></td>
-<td bgcolor=Grey><small>TÖL304G d3 Forrmál NN V-155</small></td>
-<td bgcolor=Purple><small>TÖL304G d1 Forrmál NN V-155<br />STÆ301G d Tvinnf. I RA V-138</small></td>
+<td><small></small></td>
+<td bgcolor=Grey><small>TÖL304G d1 Forrmál NN V-155</small></td>
 <td><small></small></td>
 <td><small></small></td>
 <td bgcolor=Red><small>TÖL306G d3 Vefforr. ÓSK HT-103</small></td>
 </tr>
 <tr>
 <td><small>17:30-18:10</small></td>
-<td bgcolor=Grey><small>TÖL304G d3 Forrmál NN V-155</small></td>
+<td><small></small></td>
 <td bgcolor=Grey><small>TÖL304G d1 Forrmál NN V-155</small></td>
 <td><small></small></td>
 <td><small></small></td>
